force-app/main/default/objects/Account_Rating_Layout_Field__c/Account_Rating_Layout_Field__c.object-meta.xml
<CustomObject>
    <label>Account Rating Layout Field</label>
    <nameField>
        <displayFormat>ARLF-{00000}</displayFormat>
        <label>Account Rating Layout Field Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Rating Layout Fields</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>