force-app/main/default/objects/Account_Rating_Layout_Field__c/fields/Account_Rating_Layout__c.field-meta.xml
<CustomField>
    <fullName>Account_Rating_Layout__c</fullName>
    <label>Account Rating Layout</label>
    <referenceTo>Account_Rating_Layout__c</referenceTo>
    <relationshipLabel>Account Rating Layout Fields</relationshipLabel>
    <relationshipName>Account_Rating_Layout_Fields</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>