force-app/main/default/objects/Account_Rating_Layout_Field__c/fields/Display_Label__c.field-meta.xml
<CustomField>
    <fullName>Display_Label__c</fullName>
    <description>Override label shown in the rating UI.</description>
    <label>Display Label</label>
    <length>120</length>
    <type>Text</type>
</CustomField>