force-app/main/default/objects/Account_Rating_Layout_Field__c/fields/External_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Id__c</fullName>
    <description>Stable key for seeding layout field rows.</description>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>120</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>