force-app/main/default/objects/Account_Rating_Layout_Field__c/fields/Is_Read_Only__c.field-meta.xml
<CustomField>
    <fullName>Is_Read_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When true, field is displayed but not editable (e.g. calculated ratings).</description>
    <label>Is Read Only</label>
    <type>Checkbox</type>
</CustomField>