force-app/main/default/objects/Account_Rating_Layout_Field__c/fields/Section__c.field-meta.xml
<CustomField>
    <fullName>Section__c</fullName>
    <label>Section</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Primary Ratings</fullName>
                <default>true</default>
                <label>Primary Ratings</label>
            </value>
            <value>
                <fullName>Calculated Ratings</fullName>
            </value>
            <value>
                <fullName>Product Metrics</fullName>
            </value>
            <value>
                <fullName>General</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>